objects/AcctSeed__Cash_Disbursement_Batch__c.object
<CustomObject>
    <description>Used to document the aggregate cash disbursements. This includes detail information such as number of cash disbursements and total payment amount.</description>
    <fields>
        <fullName>AcctSeed__Batch_Amount__c</fullName>
        <label>Batch Amount</label>
        <summarizedField>AcctSeed__Cash_Disbursement__c.AcctSeed__Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Cash_Disbursement__c.AcctSeed__Cash_Disbursement_Batch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Current_Cash_Balance__c</fullName>
        <inlineHelpText>Optional field to help manage cash funds and calculate what funds will be left after the Disbursement Batch.</inlineHelpText>
        <label>Current Cash Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Cash_Disbursement__c.AcctSeed__Cash_Disbursement_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Posted_Cash_Disbursements__c</fullName>
        <inlineHelpText>Number of cash disbursements posted in the cash disbursement batch.</inlineHelpText>
        <label>Posted Cash Disbursements</label>
        <summaryFilterItems>
            <field>AcctSeed__Cash_Disbursement__c.AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Cash_Disbursement__c.AcctSeed__Cash_Disbursement_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Remaining_Cash__c</fullName>
        <formula>AcctSeed__Current_Cash_Balance__c - AcctSeed__Batch_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current Cash minus Batch Amount.</inlineHelpText>
        <label>Remaining Cash</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Starting_Check_Number__c</fullName>
        <inlineHelpText>Used to number checks sequentially in the Cash Disbursement Batch.</inlineHelpText>
        <label>Starting Check Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cash Disbursement Batch</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Batch_Amount__c</columns>
        <columns>AcctSeed__Starting_Check_Number__c</columns>
        <columns>AcctSeed__Posted_Cash_Disbursements__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Batch_Amount__c</columns>
        <columns>AcctSeed__Starting_Check_Number__c</columns>
        <columns>AcctSeed__Posted_Cash_Disbursements__c</columns>
        <columns>AcctSeed__Line_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Posted_Cash_Disbursements__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unposted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Batch_Amount__c</columns>
        <columns>AcctSeed__Posted_Cash_Disbursements__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Posted_Cash_Disbursements__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unposted</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Cash Disbursement Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cash Disbursement Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>